--- a/custom-select-control/src/styles.scss
+++ b/custom-select-control/src/styles.scss
@@ -1,1 +1,165 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+@import '@angular/cdk/overlay-prebuilt.css';
+:root {
+  --color-primary: #004859;
+  --color-accent: #ff8888;
+  --color-accent-secondary: #ffc15a;
+  --color-accent-secondary-darker: #faa415;
+  --color-background: #eceff1;
+
+  --color-success:#4caf50;
+  --color-error: #ff5722;
+  --color-info: #449eff;
+
+  --color-text: #263238;
+  --color-text-light: #607d8b;
+  
+  --height-header: 64px;
+  --height-footer: 48px;
+  --border-radius: 10px;
+  --spacing-step: 8px;
+  --font-size-h1: 34px;
+}
+
+body, html, p, h1, h2, h3, h4, h5, span {
+  padding: 0;
+  margin: 0;
+}
+body {
+  font-family: 'Poppins';
+//   background-color: var(--color-background);
+}
+
+a {
+  color: var(--color-accent);
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+form {
+  padding: calc(var(--spacing-step) * 3);
+  box-sizing: border-box;
+  border-radius: var(--border-radius);
+  background: var(--color-background);
+  min-width: 395px;
+  width: 100%;
+  max-width: 450px;
+}
+
+label, input, fieldset, button {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+fieldset {
+  border-radius: var(--border-radius);
+  border: 1px solid var(--color-text-light);
+  margin-top: var(--spacing-step);
+}
+
+button {
+  margin-top: calc(var(--spacing-step) * 2);
+  background-color: var(--color-accent-secondary);
+  border: var(--color-accent-secondary-darker) 1px solid;
+  color: var(--color-text);
+  font-weight: bold;
+  cursor: pointer;
+  &:hover {
+    opacity: 0.8;
+  }
+  &:active {
+    background-color: var(--color-accent-secondary-darker);
+    border: var(--color-accent-secondary) 1px solid;
+  }
+  .reset-button{
+    background-color: var(--color-accent-secondary-darker);
+    border: var(--color-accent-secondary) 1px solid;
+  }
+}
+
+input {
+  border: var(--color-text) solid 1px;
+}
+
+legend {
+  font-weight: bold;
+}
+
+input, button, select {
+  border-radius: 5px;
+  font-size: 18px;
+  padding: 10px 11px;
+}
+
+select {
+  width: 100%;
+}
+
+//apply to only element with ng-valid class but not on ngModelGroup & no form elenemts
+.ng-valid.ng-dirty:not([ngModelGroup]):not([formGroupName]):not([formArrayName]):not(form){
+  border: 1px solid var(--color-success);
+}
+
+//apply to only element with ng-valid class but not on ngModelGroup & no form elenemts
+.ng-invalid.ng-dirty:not([ngModelGroup="address"]):not([formGroupName]):not([formArrayName]):not(form){
+  border: 1px solid var(--color-error);
+}
+//
+form:invalid button[disabled],button[disabled]{
+  pointer-events: none;
+  border-color: rgba(0,0,0,0.1);
+  background-color: rgba(0,0,0,0.15);
+}
+@keyframes input-message-animation{
+  from{
+    opacity: 0;
+    transform: translateY(-6px);
+  }
+  to{
+    from{
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
+}
+@mixin input-message()
+{
+  font-size: 12px;
+  box-sizing: border-box;
+  padding: 2px 13px;
+  animation-name: input-message-animation;
+  animation-duration: 300ms;
+}
+.input-error{
+  @include input-message();
+  color: var(--color-error);
+  
+}
+.input-info{
+  @include input-message();
+  color: var(--color-info);
+  
+}
+
+.add-button{
+  width: 50px;
+  padding: 5px;
+}
+.remove-button{
+  margin-left: 1rem;
+  width: 50px;
+  height: 40px;
+  padding: 5px;
+  background-color: var(--color-error);
+}
+.control-buttons{
+  display: flex;
+  justify-content: end;
+}
+.control-container{
+  display: flex;
+  align-items: center;
+}
