--- a/custom-select-control/src/app/select/select/select.component.scss
+++ b/custom-select-control/src/app/select/select/select.component.scss
@@ -36,3 +36,14 @@
     margin-right: 15px;
 
 }
+
+.panel{
+    min-width: 250px;
+    padding: 5px 10px;
+    box-sizing: border-box;
+    border-radius: var(--border-radius,10px);
+    border: var(--color-text,#ccc) solid 2px;
+    background-color: #fff;
+    transform-origin: top;
+    min-height: 150px;
+}
