handling detach event as well on overlay

--- a/custom-select-control/src/app/select/select/select.component.html
+++ b/custom-select-control/src/app/select/select/select.component.html
@@ -18,6 +18,7 @@ cdkConnectedOverlay
 cdkConnectedOverlayHasBackdrop
 cdkConnectedOverlayBackdropClass="cdk-overlay-transparent-backdrop"
 (backdropClick)="closePanel()"
+(detach)="closePanel()"
 
 >
     <div class="panel" [@dropdown] (@dropdown.done)="onPanelAnimationDone($event)">
