Option Component Working using ng-content, value, disabled

--- a/custom-select-control/src/app/app.component.html
+++ b/custom-select-control/src/app/app.component.html
@@ -1,3 +1,9 @@
 <div class="container">
-  <app-select></app-select>
+  <app-select>
+    <app-option value="sanjay" >Sanjay</app-option>
+    <app-option value="prim"> Prim</app-option>
+    <app-option value="rishabh" [disabled]="true" disableReason="NA" >Rishabh</app-option>
+    <app-option value="nitish" >Nitish</app-option>
+    <app-option value="shiva" >Shiva</app-option>
+  </app-select>
 </div>
