Using Selection Model

--- a/custom-select-control/src/app/app.component.html
+++ b/custom-select-control/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <app-select value="sanjay">
+  <app-select label="Pick the user" value="sanjay">
     <app-option value="sanjay" >Sanjay</app-option>
     <app-option value="prim"> Prim</app-option>
     <app-option value="rishabh" [disabled]="true" disableReason="NA" >Rishabh</app-option>
