--- a/custom-select-control/src/app/app.component.html
+++ b/custom-select-control/src/app/app.component.html
@@ -1,9 +1,10 @@
 <div class="container">
-  <app-select label="Pick the user" value="sanjay">
-    <app-option value="sanjay" >Sanjay</app-option>
-    <app-option value="prim"> Prim</app-option>
-    <app-option value="rishabh" [disabled]="true" disableReason="NA" >Rishabh</app-option>
-    <app-option value="nitish" >Nitish</app-option>
-    <app-option value="shiva" >Shiva</app-option>
+  <app-select  
+  label="Pick the user" 
+  [value]="initialValue"
+  [displayWith]="displayFn"
+  >
+    <app-option [value]="user" *ngFor="let user of users">{{user.name}}</app-option>
+  
   </app-select>
 </div>
